--- a/app/src/main/resources/index.html
+++ b/app/src/main/resources/index.html
@@ -313,7 +313,7 @@
                 document.querySelector(".btn-bfm[onclick='ask_switch_confirm();']").disabled = true;
                 document.querySelector(".btn-bfm[onclick='ask_reinit();']").disabled = true;
             }
-            
+
             document.getElementById('cb_refresh').checked = true;
         });
         
@@ -714,7 +714,8 @@
                     beforeSend: function (xhr) {
                         xhr.setRequestHeader('Authorization', 'Basic ' + btoa(unescape(encodeURIComponent(document.getElementById("axbu").innerText + ':' + document.getElementById("axbp").innerText))))
                     },
-                    success: function (data) {
+                    success: async function (data) {
+                        await new Promise(r => setTimeout(r, 3000));
                         getRows(true);
                         document.getElementById('cb_refresh').checked = true;
                         document.getElementById("overlay").style.display = 'none';
