custom logo feature added, encrypted pgpass null bug fixed

--- a/app/src/main/resources/index.html
+++ b/app/src/main/resources/index.html
@@ -24,6 +24,7 @@
         <div class="d-flex justify-content-left">
             <img class="left-logo" src="/images/bfm-logo-active.png" alt="bfm-logo-active">
         </div>
+        {{ CUSTOM_LOGO }}
         <h3>Welcome!</h3>        
         <h1>Cluster Overview</h1>
         <div class="state-div">
